fixed modal alignment (desktop)

--- a/src/styles/1-basics/_global.sass
+++ b/src/styles/1-basics/_global.sass
@@ -3,7 +3,8 @@ html, body
     
 body 
     font-family: Arial, Helvetica, sans-serif
-    // overflow: hidden
+    overflow-x: hidden
+    // overflow-y: hidden
 
 .App
     height: 100%
