--- a/src/styles/2-components/_buymodal.sass
+++ b/src/styles/2-components/_buymodal.sass
@@ -4,14 +4,14 @@
     margin-right: auto
     outline: none  //this is to hide focused outline on BuyModal//
     .MuiCard-root
+        margin-left: auto
+        margin-right: auto
         width: 334px
         height: 470px
-        margin-top: 80px
+        margin-top: 75px
         background: linear-gradient(to bottom right, #343434, #151515)
         border-radius: 10px
         text-align: center
-        &:focus
-            display: none !important
         .header
             display: flex
             align-items: center
@@ -43,5 +43,5 @@
 
     .actions
         button
-            margin-top: 20px
+            margin-top: 30px
             filter: none
