--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,6 +4,7 @@ html, body {
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
 
 .App {
@@ -359,15 +360,14 @@ footer span button {
   outline: none;
 }
 .buy-modal .MuiCard-root {
+  margin-left: auto;
+  margin-right: auto;
   width: 334px;
   height: 470px;
-  margin-top: 80px;
+  margin-top: 75px;
   background: linear-gradient(to bottom right, #343434, #151515);
   border-radius: 10px;
   text-align: center;
-}
-.buy-modal .MuiCard-root:focus {
-  display: none !important;
 }
 .buy-modal .MuiCard-root .header {
   display: flex;
@@ -403,7 +403,7 @@ footer span button {
   color: #979797;
 }
 .buy-modal .actions button {
-  margin-top: 20px;
+  margin-top: 30px;
   filter: none;
 }
 
